# annotis

./: .gitignore  .pre-commit-config.yaml  BLUEPRINT.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  sync-adapters.sh
ai-rules/: README.md
ai-rules/core/: architecture.md  cpp.md  git-workflow.md  javascript.md  kotlin.md  python.md  rust.md  sql.md  swift.md  typescript.md  universal.md
bash/: README.md  safety-patterns.md  style-guide.md  testing.md
bash/examples/: bad_script.sh  good_script.sh
cpp/: README.md  architecture.md  memory-management.md  performance.md  style-guide.md  testing.md
cpp/examples/: bad_service.cpp  good_service.cpp  test_example.cpp
go/: README.md  concurrency.md  error-handling.md  style-guide.md  testing.md  tooling.md
go/examples/: bad_service.go  good_service.go  good_service_test.go
java/: README.md  architecture.md  style-guide.md  testing.md  tooling.md
java/examples/: BadService.java  GoodService.java  (+1 more)
javascript/: README.md  architecture.md  async-patterns.md  style-guide.md  testing.md  tooling.md
kotlin/: README.md  architecture.md  coroutines.md  style-guide.md  testing.md
python/: README.md  architecture.md  performance.md  style-guide.md  testing.md  tooling.md
rust/: README.md  error-handling.md  ownership-patterns.md  performance.md  style-guide.md  testing.md
sql/: README.md  migrations.md  query-optimization.md  schema-design.md  style-guide.md
swift/: README.md  architecture.md  style-guide.md  testing.md  tooling.md
tests/: conftest.py
typescript/: README.md  architecture.md  style-guide.md  testing.md  tooling.md  type-safety.md
universal/: README.md  architecture.md  code-principles.md  code-review.md  documentation.md  git-workflow.md  naming-conventions.md  performance.md  security.md  testing-strategy.md
(+61 files in other folders)
